# rust-service-template

./: Cargo.toml  README.md
scripts/: register-service.ps1  unregister-service.ps1
src/: launcher.rs  log.rs  main.rs  service.rs  windows_service.rs
