[package]
name = "win-service-test"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.62.1", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_System_EventLog",
    "Win32_Security"
] }

tokio = { version = "1.47.1", features = ["full"] }