[package]
name = "service-template"
version = "0.1.0"
edition = "2024"


[dependencies]
# Async runtime
tokio = { version = "1.47.1", features = ["full"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20" }
tracing-log = "0.2.0"

anyhow = "1.0.100"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.1", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_System_EventLog",
    "Win32_Security"
] }
